--- a/src/main/resources/properties/loganalyzer.properties
+++ b/src/main/resources/properties/loganalyzer.properties
@@ -1,4 +1,7 @@
+#Last changes: db.username=root
+#Mon Dec 30 19:09:18 CET 2019
 db.driver.class=com.mysql.cj.jdbc.Driver
-db.conn.url=jdbc:mysql://localhost:3306/belimo?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Berlin
-db.username=root
 db.password=zhaw123*
+clearMessageBoxOnPanelChange=true
+db.conn.url=jdbc\:mysql\://localhost\:3306/belimo?useUnicode\=true&useJDBCCompliantTimezoneShift\=true&useLegacyDatetimeCode\=false&serverTimezone\=Europe/Berlin
+db.username=root
