Unit testing: DateUtil

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
             <artifactId>appassembler-maven-plugin</artifactId>
             <version>2.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
