Deactivating panels, when db could not be conneced and base data could not be loaded

--- a/src/main/resources/properties/loganalyzer.properties
+++ b/src/main/resources/properties/loganalyzer.properties
@@ -1,5 +1,5 @@
-#Last changes: clearMessageBoxOnPanelChange=true
-#Wed Jan 08 21:49:45 CET 2020
+#Last changes: db.password=zhaw123*
+#Fri Jan 10 16:38:46 CET 2020
 db.driver.class=com.mysql.cj.jdbc.Driver
 db.password=zhaw123*
 clearMessageBoxOnPanelChange=true
