--- a/src/main/resources/properties/loganalyzer.properties
+++ b/src/main/resources/properties/loganalyzer.properties
@@ -1,8 +1,8 @@
-#Last changes: db.password=zhaw123*
-#Fri Jan 10 16:38:46 CET 2020
+#Last changes: clearMessageBoxOnPanelChange=false
+#Fri Jan 10 18:40:50 CET 2020
 db.driver.class=com.mysql.cj.jdbc.Driver
 db.password=zhaw123*
-clearMessageBoxOnPanelChange=true
+clearMessageBoxOnPanelChange=false
 selectedPanelOnStartup=BaseDataPanel
 db.conn.url=jdbc\:mysql\://localhost\:3306/belimo?useUnicode\=true&useJDBCCompliantTimezoneShift\=true&useLegacyDatetimeCode\=false&serverTimezone\=Europe/Berlin\t
 db.username=root
