Cleanup and Refactoring, clean up warnings

--- a/src/main/resources/properties/loganalyzer.properties
+++ b/src/main/resources/properties/loganalyzer.properties
@@ -1,8 +1,8 @@
-#Last changes: clearMessageBoxOnPanelChange=false
-#Fri Jan 10 18:40:50 CET 2020
+#Last changes: db.username=root
+#Sun Jan 12 15:14:27 CET 2020
 db.driver.class=com.mysql.cj.jdbc.Driver
 db.password=zhaw123*
 clearMessageBoxOnPanelChange=false
 selectedPanelOnStartup=BaseDataPanel
-db.conn.url=jdbc\:mysql\://localhost\:3306/belimo?useUnicode\=true&useJDBCCompliantTimezoneShift\=true&useLegacyDatetimeCode\=false&serverTimezone\=Europe/Berlin\t
+db.conn.url=jdbc\:mysql\://localhost\:3306/belimo?useUnicode\=true&useJDBCCompliantTimezoneShift\=true&useLegacyDatetimeCode\=false&serverTimezone\=Europe/Berlin
 db.username=root
