Added db error messages for base data changes

--- a/src/main/resources/properties/loganalyzer.properties
+++ b/src/main/resources/properties/loganalyzer.properties
@@ -1,6 +1,8 @@
+#Last changes: db.password=zhaw123*
+#Fri Jan 17 20:19:37 CET 2020
 db.driver.class=com.mysql.cj.jdbc.Driver
-db.username=root
 db.password=zhaw123*
-clearMessageBoxOnPanelChange=false
+clearMessageBoxOnPanelChange=true
 selectedPanelOnStartup=ReportPanel
-db.conn.url=jdbc:mysql://localhost:3306/belimo?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Berlin
+db.conn.url=jdbc\:mysql\://localhost\:3306/belimo?useUnicode\=true&useJDBCCompliantTimezoneShift\=true&useLegacyDatetimeCode\=false&serverTimezone\=Europe/Berlin
+db.username=root
